--- a/index.html
+++ b/index.html
@@ -4,15 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
   </head>
   <body>
     <h1>Top 10 List: Makeup Edition</h1>
-    <button id="goButton">Go</button>
-    <ul id="makeupList"></ul>
+    <div>
+      <button id="goButton">Go</button>
+      <ul id="makeupList"></ul>
+      <button id="blushButton">Blush</button>
+      <ul id="blushList"></ul>
+      <button id="bronzerButton">Bronzer</button>
+      <ul id="bronzerList"></ul>
+    </div>
 
-    <button id="blushButton">Blush</button>
-    <ul id="blushList"></ul>
+    <div>
+      <button id="eyeshadowButton">Eyeshadow</button>
+      <ul id="eyeshadowList"></ul>
+    </div>
+
+    <div>
+      <button id="foundationButton">Foundation</button>
+      <ul id="foundstionList"></ul>
+    </div>
+
+    <div>
+      <button id="liplinerButton">Lip Liner</button>
+      <ul id="liplinerList"></ul>
+    </div>
+
+    <div>
+      <button id="lipstickButton">Lipstick</button>
+      <ul id="lipstickList"></ul>
+    </div>
+
+    <div>
+      <button id="mascaraButton">Mascara</button>
+      <ul id="mascaraList"></ul>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
