added css styling

--- a/index.html
+++ b/index.html
@@ -4,43 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Top 10 List: Makeup Edition</h1>
-    <div>
-      <button id="goButton">Go</button>
-      <ul id="makeupList"></ul>
-      <button id="blushButton">Blush</button>
-      <ul id="blushList"></ul>
-      <button id="bronzerButton">Bronzer</button>
-      <ul id="bronzerList"></ul>
-    </div>
+    <h1>TOP RATED MAKEUP: Affordable Edition</h1>
 
-    <div>
+    <h3>Select your choice below for a list of products.</h3>
+    <br />
+    <div id="main">
+      <button id="bronzerButton">Bronzer</button>
+      <br />
+      <ul id="bronzerList"></ul>
+      <br />
+      <button id="blushButton">Blush</button>
+      <br />
+      <ul id="blushList"></ul>
+      <br />
       <button id="eyeshadowButton">Eyeshadow</button>
       <ul id="eyeshadowList"></ul>
-    </div>
+      <br />
 
-    <div>
-      <button id="foundationButton">Foundation</button>
-      <ul id="foundstionList"></ul>
-    </div>
-
-    <div>
       <button id="liplinerButton">Lip Liner</button>
       <ul id="liplinerList"></ul>
-    </div>
-
-    <div>
-      <button id="lipstickButton">Lipstick</button>
-      <ul id="lipstickList"></ul>
-    </div>
-
-    <div>
+      <br />
       <button id="mascaraButton">Mascara</button>
       <ul id="mascaraList"></ul>
+      <br />
+      <button id="goButton">All Products</button>
+      <ul id="makeupList"></ul>
+      <br />
     </div>
 
     <script src="main.js"></script>
